# sciml_notebook

./: .buildinfo  .gitignore  404.html  LICENSE.html  README.html  README.md  _config.yml  _toc.yml  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sciml_plots.html  search.html  searchindex.js  sitemap.xml
.github/workflows/: publish.yml
_sources/pinns/: 01-static.ipynb  02-linear-elastic-fixed.ipynb  05-burgers.ipynb  07-heat-parameter-inverse.ipynb  inverse-oscillator-diffeq.ipynb  pinns.md  static.ipynb
_sources/pinns/jax/: 00-oscillator.ipynb
docs/: index.md  sciml_plots.py  sciml_style.mplstyle
docs/pinns/: burgers-optimizers.ipynb  generate_oscillator_figs.py  inverse-heat-parameter.ipynb  ntk-spectral-bias.ipynb  pinn-failure-modes.ipynb  rewrite_burgers_optimizer_benchmark.py  rewrite_three_principles.py  three-principles.ipynb
pinns/: 00-oscillator.ipynb  01-static.html  01-static.ipynb  02-linear-elastic-fixed.html  02-linear-elastic-fixed.ipynb  02-linear-elastic.html  02-linear-elastic.ipynb  03-collocation.html  03-collocation.ipynb  04-adaptive-weights-pinns.html  04-adaptive-weights-pinns.ipynb  05-burgers.html  05_burgers.html  07-heat-parameter-inverse.html  07-heat-parameter-inverse.ipynb  08-pinns-oscillator-analysis.html  adaptive-weights.html  burgers-optimizers.html  burgers-optimizers.ipynb  burgers.html  collocation.html  generate_oscillator_extrapolation.html  generate_oscillator_extrapolation.py  generate_oscillator_figs.html  generate_static_figs.html  generate_static_figs.py  inverse-heat-parameter.html  inverse-oscillator-diffeq.html  linear-elastic-fixed.html  ntk-spectral-bias.html  oscillator-analysis.html  pinn-failure-modes.html  pinn-failure-modes.ipynb  pinns.html  pinns.md  requirements.txt  rewrite_burgers_optimizer_benchmark.html  rewrite_burgers_optimizer_benchmark.py  rewrite_ntk_spectral_bias.html  rewrite_ntk_spectral_bias.py  (+10 more)
pinns/discrete-time-burgers/: burgers_discrete_time.pt  discrete-time-burgers.html  discrete-time-burgers.ipynb  discrete-time-burgers.py
pinns/discrete_time_burgers/: discrete-time-burgers.py
pinns/discrete_time_burgers/IRK_weights/: butcher_irk.py
pinns/jax/: 00-oscillator.html  00-oscillator.ipynb
search/: search_index.json
