[project]
name = "sciml-notebook"
version = "0.1.0"
description = "Companion notebooks for Scientific Machine Learning"
authors = [{name = "Krishna Kumar", email = "krishnak@utexas.edu"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "ipython>=8.0",
    "ipykernel>=6.29",
    "tqdm>=4.66",
    "torch>=2.5",
    "torchvision>=0.20",
    "imageio>=2.31",
    "seaborn>=0.13",
    "ipywidgets>=8.1",
    "h5py>=3.12",
    "pydoe>=0.3",
    "mpmath>=1.3",
]

[project.optional-dependencies]
jax = [
    "jax[cpu]>=0.4.13",
    "jaxlib>=0.4.13",
    "optax>=0.1.7",
    "flax>=0.10",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.24",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (common in math code)
    "B905",   # zip without strict (python 3.10 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["sciml_notebook"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
